# blkdiag

./: .gitignore  README.md  pyproject.toml
blkdiag/: main.py  umount.py
blkdiag/checks/: btrfs.py  check.py  writable.py  write_check.py
scripts/: btrfs-check-large-disks.py
src/: errors.py  lsblk.py  main.py
src/checks/: btrfs.py  check.py  writable.py  write_check.py
