[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blkdiag"
description = "A simple command line tool to diagnose block devices issues on Linux"
keywords = [
	"hdd",
	"ssd",
	"drive",
	"btrfs",
	"diagnosis",
	"linux",
]
readme = "README.md"
license = {text = "GPLv3"}
authors = [
	{ name = "Geoffrey Coulaud", email = "geoffrey.coulaud@gmail.com" },
]
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3",
]
version = "1.0.0"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/GeoffreyCoulaud/blkdiag"
Repository = "https://github.com/GeoffreyCoulaud/blkdiag.git"

[project.scripts]
blkdiag = "blkdiag.main:main"